tooling/nargo_cli/tests/snapshots/execution_success/main_bool_arg/execute__tests__force_brillig_false_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "boolean"
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "array",
          "length": 2,
          "type": {
            "kind": "boolean"
          }
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {}
  },
  "bytecode": [
    "func 0",
    "current witness index : _3",
    "private parameters indices : [_0, _1, _2]",
    "public parameters indices : []",
    "return value indices : []",
    "BLACKBOX::RANGE [(_1, 1)] []",
    "BLACKBOX::RANGE [(_2, 1)] []",
    "EXPR [ (1, _0) -1 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _1) (-1, _2) 0 ]], outputs: [_3]",
    "EXPR [ (1, _1, _3) (-1, _2, _3) -1 ]",
    "unconstrained func 0",
    "[Const { destination: Direct(21), bit_size: Integer(U32), value: 1 }, Const { destination: Direct(20), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(0), size_address: Direct(21), offset_address: Direct(20) }, Const { destination: Direct(2), bit_size: Field, value: 0 }, BinaryFieldOp { destination: Direct(3), op: Equals, lhs: Direct(0), rhs: Direct(2) }, JumpIf { condition: Direct(3), location: 8 }, Const { destination: Direct(1), bit_size: Field, value: 1 }, BinaryFieldOp { destination: Direct(0), op: Div, lhs: Direct(1), rhs: Direct(0) }, Stop { return_data: HeapVector { pointer: Direct(20), size: Direct(21) } }]"
  ],
  "debug_symbols": "nZHBCoMwDIbfJece7HSb+CpjSK1RCqUttR0M8d0XxU49DIaXpsmfL4H8I7TYxL5WprMDVI8RGq+0Vn2trRRBWUPVcWKQ0jp4RCrBTifKCY8mQGWi1gxeQselaXDCLDEIT2rGAE1LkQZ2SuP8m9hGZ7/R8ray5f0LX/+meZavOM+KMzznieeXU/s3Pj/wT8qEVP5wb7hQI4McqoJBQe80j/ZKNBpXP7po5M6e8HZJSQY6byW20eM8etFo2Qc=",
  "file_map": {
    "50": {
      "source": "fn main(x: bool, y: [bool; 2]) {\n    if x {\n        assert(1 != 2);\n    }\n\n    assert(x);\n    assert(y[0] != y[1]);\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "directive_invert"
  ]
}
